운영 화면 디자인 동기화 및 API View Model 확장
